--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
+    "mongoose-timestamp": "^0.6.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9"
   }
